// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Navigation Test snapshot 1`] = `
.emotion-3 {
  margin-top: 0;
  padding-left: 0;
  background-color: #3939a0;
}

.emotion-3 ul {
  margin-top: 0;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.emotion-0 {
  background-color: #3939a0;
  display: block;
  padding: 20px 30px;
  color: #fff;
}

.emotion-0:hover {
  background-color: #272781;
}

.emotion-3 {
  margin-top: 0;
  padding-left: 0;
  background-color: #3939a0;
}

.emotion-3 ul {
  margin-top: 0;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.emotion-0 {
  background-color: #3939a0;
  display: block;
  padding: 20px 30px;
  color: #fff;
}

.emotion-0:hover {
  background-color: #272781;
}

<div
  class="emotion-3"
>
  <ul>
    <li>
      <a
        class="emotion-0"
        href="/"
      >
        Home Page
      </a>
    </li>
    <li>
      <a
        class="emotion-0"
        href="/test-page-1"
      >
        Test Page 1
      </a>
    </li>
    <li>
      <a
        class="emotion-0"
        href="/test-page-2"
      >
        Test Page 2
      </a>
    </li>
  </ul>
</div>
`;

exports[`Test Navigation Test snapshot with empty props 1`] = `
.emotion-0 {
  margin-top: 0;
  padding-left: 0;
  background-color: #3939a0;
}

.emotion-0 ul {
  margin-top: 0;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

.emotion-0 {
  margin-top: 0;
  padding-left: 0;
  background-color: #3939a0;
}

.emotion-0 ul {
  margin-top: 0;
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

<div
  class="emotion-0"
>
  <ul />
</div>
`;
